<resources>
    <string name="app_name">Abacom</string>
    <string name="share_chooser">Compartir con</string>
    <string name="validate_code">Validar código</string>
    <string name="option_ok">OK</string>
    <string name="option_no">NO</string>
    <string name="option_no_thanks_upper">NO,GRACIAS</string>
    <string name="option_yes_upper">ACEPTAR</string>
    <string name="option_yes">SI</string>
    <string name="option_save">Guardar</string>
    <string name="option_cancel">Cancelar</string>
    <string name="option_accept">Aceptar</string>
    <string name="option_confirm">Confirmar</string>
    <string name="option_continue">Continuar</string>
    <string name="option_validate">Validar</string>
    <string name="option_years">años</string>
    <string name="option_share">Compartir usando:</string>
    <string name="response_successful">Datos actualizados con exito.</string>
    <string name="version_number">Versión %1$s</string>
    <string name="cancel_request">El usuario cancelo la acción</string>
    <string name="warning_alert">Cuidado!</string>
    <string name="ip_picker_image_source_title">Añadir imagen desde</string>
    <string name="ip_picker_image_source_gallery_option">Galería</string>
    <string name="ip_picker_image_source_camera_option">Cámara</string>
    <string name="image_source_title">Seleccione una opción</string>
    <string name="error_assignment_mandatory">Debes seleccionar al menos 1 potencial asociado para realizar esta operación</string>
    <string name="error_promoter_selection_mandatory">Debes seleccionar al menos 1 promotor para realizar esta operación</string>
    <string name="error_notif_selection_mandatory">Debes seleccionar al menos 1 notificación para realizar esta operación</string>
    <string name="no_sd_card_msg">SD card no encontrada</string>
    <string name="error">Error</string>
    <string name="http_exception_msg">Error, por favor intente nuevamente.</string>
    <string name="no_internet_title">Error de conexión.</string>
    <string name="no_internet_msg">Compruebe su conexión a internet e intentenlo nuevamente.</string>
    <string name="permision_error_no_write_calendar">Habilite los permisos desde los settings de la aplicación para poder usar la agenda</string>
    <string name="permision_error_no_camara">Habilite los permisos desde los settings de la aplicación para poder usar la camara.</string>
    <string name="permision_error_no_write_data">Habilite los permisos desde los settings de la aplicación.</string>
    <string name="affil_copagos_error_title">Error de copago</string>
    <string name="affil_copagos_error_message">No se pudo procesar el copago asociado:</string>
    <string name="compress_file_error">Error al comprimir el archivo</string>
    <string name="encode_file_error">Error al codificar el archivo</string>
    <string name="error_unexpected">Error inesperado</string>
    <string name="error_missing_certificate">No se encuentra el certificado. Debes conectate con el Administrador para obtener uno</string>
    <string name="error_invalid_certificate">Certificado Inválido. Debes conectate con el Administrador para obtener uno válido</string>
    <string name="error_bad_certificate_keystore">Clave de certificado invalido o archivo corrupto. Debes conectate con el Administrador para obtener uno válido</string>
    <string name="login_title">Sistema de asociados</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El campo email es inválido</string>
    <string name="error_invalid_password">Contraseña muy pequeña</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_login">El inicio de sesión ha fallado. Compruebe su mail y contraseña</string>
    <string name="error_login_detail">Compruebe su mail y contraseña: </string>
    <string name="error_login_zone">El inicio de sesión ha fallado, no se pudieron obtener las zonas</string>
    <string name="error_invalid_role_login">Usuario con rol no válido para ingresar en la aplicación movil</string>
    <string name="permission_rationale">El permiso de contactos es necesario para autocompletar el mail</string>
    <string name="error_cam_permission">Debes habilitar el permiso de la Camara desde la configuración</string>
    <string name="error_calendar_read_permission">Debes habilitar el permiso de lectura de calendario desde la configuración</string>
    <string name="error_calendar_write_permission">Debes habilitar el permiso de escritura de calendario desde la configuración</string>
    <string name="help_cobertura_list">Sólo podras seleccionar como \'cobertura proveniente\' las que figuran en el listado</string>
    <string name="help_aporte_os">Ingresar importe que consta en el recibo de sueldo en el item Aporte Obra Social. Sólo completar este campo si posee recibo de sueldo</string>
    <string name="help_remuneracion_bruta">Ingresar importe de remuneracion sujeta a aportes. Puede colocar una estimada o la que figura en el recibo de sueldo</string>
    <string name="help_manual_quotation">Recuerde que en este modo de cotización están deshabilitadas todas las operaciones automáticas</string>
    <string name="help_os_other_option">Las siguientes obras sociales no están habilitadas para desregular:\nOs del personal de dirección, del personal judicial, de empresas, de universidades nacionales, de fuerzas armadas, seguridad, policía y servicio penitenciario/municiplales/provinciales/PAMI y jubilados de otras obras sociales</string>
    <string name="help_unification_new_existent_pago">Recuerde que debe mantener la forma de pago actual de la afiliación</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Buscar</string>
    <string name="action_filter">Filtrar</string>
    <string name="title_profile">Perfil</string>
    <string name="action_share">Compartir</string>
    <string name="menu_header">MENU</string>
    <string name="menu_prospective_client">Asignaciones</string>
    <string name="menu_item_add_prospective_client">Cargar potencial asociado</string>
    <string name="menu_item_edit_prospective_client">Editar potencial asociado</string>
    <string name="menu_salesman">Listado de promotores</string>
    <string name="menu_contact_detail">Detalle del Contacto</string>
    <string name="menu_quote">Cotizar</string>
    <string name="menu_quote_adic_opt">Cotizar Adicionales optativos</string>
    <string name="menu_manual_quote">Cotización Manual</string>
    <string name="menu_affiliation">Afiliación</string>
    <string name="menu_conyuge">Datos del Conyuge</string>
    <string name="menu_cobranzas">Cobranza</string>
    <string name="menu_assigned">Asignados</string>
    <string name="menu_schedule">Agenda</string>
    <string name="menu_additional">Cotizar adicionales optativos</string>
    <string name="menu_transferencia">Cotizar transferencia de segmento</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_add_notification">Crear notificación</string>
    <string name="menu_indicator">Indicadores</string>
    <string name="menu_logout">Salir</string>
    <string name="log_out_confirm">Estás seguro que deseas salir?</string>
    <string name="activity_notification">Notificacion</string>
    <string name="activity_notifications_sended">Notif Enviadas</string>
    <string name="activity_web_link">Link Web</string>
    <string name="button_assign">ASIGNAR</string>
    <string name="button_send">ENVIAR</string>
    <string name="button_attach">ADJUNTAR</string>
    <string name="notification_add">Crear Notificación</string>
    <string name="notification_add_loading">Creando notificación ...</string>
    <string name="notification_title">Título de la notificación</string>
    <string name="notification_text">Texto de la notificación</string>
    <string name="notification_promoter_selection">Seleccionar los Asesores comerciales</string>
    <string name="notification_link">Link de Notificación</string>
    <string name="notification_hight_priority">PRIORIDAD ALTA</string>
    <string name="notification_medium_priority">PRIORIDAD MEDIA</string>
    <string name="notification_low_priority">PRIORIDAD BAJA</string>
    <string name="notification_remove_confirm">Estas seguro que deseas borrar la notificación ?</string>
    <string name="notification_list_remove_confirm">Estas seguro que deseas borrar la notificaciones seleccionadas ?</string>
    <string name="notification_success_removed">La notificación ha sido eliminada con éxito</string>
    <string name="notification_remove_error">Error al eliminar la notificación</string>
    <string name="notifications_removing_data">Eliminando notificaciones ...</string>
    <string name="notification_success_sended">La notificación ha sido enviada con éxito</string>
    <string name="notifications_sending_data">Enviando notificaciones ...</string>
    <string name="notifications_all">TODAS</string>
    <string name="notifications_all_in_zone">TODAS en %1s</string>
    <string name="notification_zone">Zona</string>
    <string name="notifications_priority">Prioridad</string>
    <string name="notification_send">REENVIAR</string>
    <string name="error_notifications_loading_promoters">Error al cargar la lista de promotores.Intenta nuevamente</string>
    <string name="quantity_to_assign_txt_plural">Hola %1$s, tenés %2$d potenciales asociados sin asignar</string>
    <string name="quantity_to_assign_txt_singular">Hola %1$s, tenés 1 potencial asociado sin asignar</string>
    <string name="accion_assign_txt_plural">Vas a asignar %1$d potenciales asociados a:</string>
    <string name="accion_assign_txt_singular">Vas a asignar 1 potencial asociado a:</string>
    <string name="expiration_day_singular">1 día</string>
    <string name="expiration_day_plural">%1$s días</string>
    <string name="entity_age_zone">%1$s años  (%2$s) - %3$s</string>
    <string name="entity_age">%1$s años (%2$s)</string>
    <string name="expired_today">VENCE HOY</string>
    <string name="expired_tomorrow">VENCE MAÑANA</string>
    <string name="defeated">VENCIDO</string>
    <string name="new_item">NUEVO</string>
    <string name="assingment_in_process">Asignando potenciales asociados ...</string>
    <string name="assingment_confirmation">Vas a asignar %1$s potenciales asociados a %2$s</string>
    <string name="my_new_assigment">Hola %1$s, tenes 1 nuevo asignado a contactar.</string>
    <string name="field_aporta_mono">Aporta a Monotributo</string>
    <string name="field_dato_conyuge">Datos del %1$s:</string>
    <string name="field_dni">DNI</string>
    <string name="field_yes">Si</string>
    <string name="field_no">No</string>
    <string name="field_aporte_imp_note">IMPORTANTE\nNo incluir el aporte del cónyuge en caso que unifiquen aportes</string>
    <string name="field_cantidad_integrantes">Integrantes por los que aporta</string>
    <string name="seleccione_monotributo_error">Usted debe indicar si aporta monotributo</string>
    <string name="manual_input_plan">Plan</string>
    <string name="manual_input_plan_price">Importe</string>
    <string name="filter_no_scheduled">Sin agendar</string>
    <string name="filter_interviewed">Entrevistados</string>
    <string name="filter_quoted">Cotizados</string>
    <string name="quote_see_quote">VER COTIZACION</string>
    <string name="station_date">Fecha:</string>
    <string name="station_username">Nombre:</string>
    <string name="station_comment">Comentario:</string>
</resources>