<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_date"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_username"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>


    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/station_comment"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>

</LinearLayout>