<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:weightSum="9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/no_scheduled" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_no_scheduled"
                android:id="@+id/no_scheduled_image" />

            <TextView
                style="@style/FilterTitle"
                android:text="@string/filter_no_scheduled"
                android:id="@+id/textView2" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/interviewed" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_interviewed"
                android:id="@+id/interviewed_image" />

            <TextView
                style="@style/FilterTitle"
                android:text="@string/filter_interviewed"
                android:id="@+id/textView3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/quoted" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_quoted"
                android:id="@+id/quoted_image" />
            <TextView
                style="@style/FilterTitle"
                android:text="@string/filter_quoted"
                android:id="@+id/textView4" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/close_button" />

</RelativeLayout>